@@ -50,8 +50,30 @@
         </item>
         <item>
             <key> <string>_body</string> </key>
-            <value> <string>if context.REQUEST.form.has_key("key"):\n
-  webpage = context.portal_catalog.getResultValue(reference=context.REQUEST.form.get("key"))\n
+            <value> <string>"""\n
+  Redirect connected user to UNG Web Site or to document using the key \n
+"""\n
+portal = context.getPortalObject()\n
+\n
+if portal.portal_membership.isAnonymousUser() and context.REQUEST.form.has_key("key"):\n
+  kw = {}\n
+  module = portal.getDefaultModule(\'Person\')\n
+  reference = str(DateTime().millis())\n
+  person = module.newContent(portal_type=\'Person\',\n
+                             description=context.REQUEST.get(\'HTTP_X_FORWARDED_FOR\',\'Found no ip\'),\n
+                             reference=reference,\n
+                             )\n
+  assignment = person.newContent(portal_type="Assignment")\n
+  assignment.open()\n
+  person.validate()\n
+  uf = getattr(portal, \'acl_users\', None)\n
+  plugin = getattr(uf, \'ung_key_auth\',None)\n
+  kw["__ac_key"] = plugin.encrypt(reference)\n
+  kw["key"] = context.REQUEST.form.get("key")\n
+  return context.Base_redirect("/", keep_items=dict(**kw)) \n
+\n
+if context.REQUEST.form.has_key("key"):\n
+  webpage = context.WebSection_userFollowUpWebPage(reference=context.REQUEST.form.get("key"))\n
   webpage_id = webpage.getId()\n
   editor_name = context.Base_getEditorViewName(webpage.getPortalType())\n
   return context.Base_redirect("/web_page_module/%s/%s" % (webpage_id, editor_name),\n
@@ -74,6 +96,16 @@ else:\n
         <item>
             <key> <string>_params</string> </key>
             <value> <string></string> </value>
+        </item>
+        <item>
+            <key> <string>_proxy_roles</string> </key>
+            <value>
+              <tuple>
+                <string>Assignee</string>
+                <string>Assignor</string>
+                <string>Manager</string>
+              </tuple>
+            </value>
         </item>
         <item>
             <key> <string>errors</string> </key>
@@ -101,10 +133,24 @@ else:\n
                           <tuple>
                             <string>_getattr_</string>
                             <string>context</string>
+                            <string>portal</string>
+                            <string>kw</string>
+                            <string>module</string>
+                            <string>str</string>
+                            <string>DateTime</string>
+                            <string>reference</string>
+                            <string>person</string>
+                            <string>assignment</string>
+                            <string>getattr</string>
+                            <string>None</string>
+                            <string>uf</string>
+                            <string>plugin</string>
+                            <string>_write_</string>
+                            <string>_apply_</string>
+                            <string>dict</string>
                             <string>webpage</string>
                             <string>webpage_id</string>
                             <string>editor_name</string>
-                            <string>dict</string>
                           </tuple>
                         </value>
                     </item>
