@@ -52,6 +52,7 @@
             <key> <string>_body</string> </key>
             <value> <string>if context.getReference().startswith("default-"):\n
   context.setReference(DateTime().millis())\n
+context.share()\n
 return "%s/?key=%s" % (context.REQUEST.get("URL3"), context.getReference())\n
 </string> </value>
         </item>
